--- a/EmployeeSQL/Bonus/bonus.ipynb
+++ b/EmployeeSQL/Bonus/bonus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,8 @@
     "                                  LEFT JOIN titles ON employees.emp_no = titles.emp_no\n",
     "                                  LEFT JOIN salaries ON employees.emp_no = salaries.emp_no;\"\"\")\n",
     "\n",
-    "salary_range = create_pandas_table(\"\"\"SELECT employees.emp_no, salaries.salary \n",
-    "                                  FROM salaries\n",
-    "                                  LEFT JOIN employees ON salaries.emp_no = employees.emp_no;\"\"\")\n",
+    "salary_range = create_pandas_table(\"\"\"SELECT * \n",
+    "                                  FROM salaries\"\"\")\n",
     "\n",
     "# Close the cursor and connection to so the server can allocate\n",
     "# bandwidth to other requests\n",
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -170,135 +169,19 @@
        "[443308 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "salary_range\n",
     "average_salary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>emp_no</th>\n",
-       "      <th>salary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10001</td>\n",
-       "      <td>60117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10005</td>\n",
-       "      <td>78228</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10010</td>\n",
-       "      <td>72488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10011</td>\n",
-       "      <td>42365</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10013</td>\n",
-       "      <td>40000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300019</th>\n",
-       "      <td>499967</td>\n",
-       "      <td>87170</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300020</th>\n",
-       "      <td>499972</td>\n",
-       "      <td>41002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300021</th>\n",
-       "      <td>499985</td>\n",
-       "      <td>40000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300022</th>\n",
-       "      <td>499987</td>\n",
-       "      <td>52282</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300023</th>\n",
-       "      <td>499998</td>\n",
-       "      <td>40000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>300024 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        emp_no  salary\n",
-       "0        10001   60117\n",
-       "1        10005   78228\n",
-       "2        10010   72488\n",
-       "3        10011   42365\n",
-       "4        10013   40000\n",
-       "...        ...     ...\n",
-       "300019  499967   87170\n",
-       "300020  499972   41002\n",
-       "300021  499985   40000\n",
-       "300022  499987   52282\n",
-       "300023  499998   40000\n",
-       "\n",
-       "[300024 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "salary_range"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -327,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
