minor updates to bonus

--- a/EmployeeSQL/Bonus/bonus.ipynb
+++ b/EmployeeSQL/Bonus/bonus.ipynb
@@ -51,132 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>emp_no</th>\n",
-       "      <th>salary</th>\n",
-       "      <th>title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10001</td>\n",
-       "      <td>60117</td>\n",
-       "      <td>Senior Engineer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10005</td>\n",
-       "      <td>78228</td>\n",
-       "      <td>Senior Staff</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10005</td>\n",
-       "      <td>78228</td>\n",
-       "      <td>Staff</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10010</td>\n",
-       "      <td>72488</td>\n",
-       "      <td>Engineer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10011</td>\n",
-       "      <td>42365</td>\n",
-       "      <td>Staff</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>443303</th>\n",
-       "      <td>499972</td>\n",
-       "      <td>41002</td>\n",
-       "      <td>Senior Engineer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>443304</th>\n",
-       "      <td>499985</td>\n",
-       "      <td>40000</td>\n",
-       "      <td>Staff</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>443305</th>\n",
-       "      <td>499987</td>\n",
-       "      <td>52282</td>\n",
-       "      <td>Staff</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>443306</th>\n",
-       "      <td>499998</td>\n",
-       "      <td>40000</td>\n",
-       "      <td>Senior Staff</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>443307</th>\n",
-       "      <td>499998</td>\n",
-       "      <td>40000</td>\n",
-       "      <td>Staff</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>443308 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        emp_no  salary            title\n",
-       "0        10001   60117  Senior Engineer\n",
-       "1        10005   78228     Senior Staff\n",
-       "2        10005   78228            Staff\n",
-       "3        10010   72488         Engineer\n",
-       "4        10011   42365            Staff\n",
-       "...        ...     ...              ...\n",
-       "443303  499972   41002  Senior Engineer\n",
-       "443304  499985   40000            Staff\n",
-       "443305  499987   52282            Staff\n",
-       "443306  499998   40000     Senior Staff\n",
-       "443307  499998   40000            Staff\n",
-       "\n",
-       "[443308 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "salary_range\n",
-    "average_salary"
+    "#Check Tables\n",
+    "#salary_range\n",
+    "#average_salary"
    ]
   },
   {
@@ -267,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
