bonus question update

--- a/EmployeeSQL/Bonus/bonus.ipynb
+++ b/EmployeeSQL/Bonus/bonus.ipynb
@@ -21,6 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This block was adapted from http://www.postgresqltutorial.com/postgresql-python/connect/\n",
     "# Obtain the configuration parameters\n",
     "params = config()\n",
     "# Connect to the PostgreSQL database\n",
